--- a/webinar.html
+++ b/webinar.html
@@ -97,7 +97,7 @@
                   </h1>
                 </div>
               </div>
-              <div class="line"></div>
+              <div class="line my-8"></div>
               <p class="text">
                 綠色和平將舉辦「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會，邀請到現正在船艦「極地曙光號」工作的水手黃懿萱（又名小豚），於船上直播，帶您參觀船上設備、船員日常生活；並與您即時對話，分享多年隨船協助研究和行動的經歷、在海上工作的趣事、為何如此熱衷守護海洋等等。
               </p>
@@ -121,17 +121,14 @@
                         <strong>日期：</strong>
                       </td>
                       <td class="border px-4 py-4">
-                        2020年6月8日（星期日）
+                        2020年6月7日
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
                         <strong>時間：</strong>
                       </td>
-                      <td class="border px-4 py-4">
-                        線上參觀船艦「極地曙光號」 - 下午時至時<br>
-                        與XXX即席交流 - 下午時至時半
-                      </td>
+                      <td class="border px-4 py-4">下午9時至10時</td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
@@ -147,7 +144,8 @@
                       </td>
                       <td class="border px-4 py-4">
                         <p class="text">
-                          2011年首次在彩虹勇士號擔任廚師助理，雖名為水手，實際是翻譯、裁縫、工匠、行動者一手包辦，更擅長操作精密科學儀器！
+                          2011
+                          年首次在彩虹勇士號擔任廚師助理，雖名為水手，實際是翻譯、裁縫、工匠、行動者一手包辦，更擅長操作精密科學儀器！
                         </p>
                         <p class="text">
                           曾參與追查非法漁船、攀登鑽油台行動、親身拯救日本儒艮及台灣瓶鼻海豚，最近完成南極研究航程。
@@ -159,7 +157,7 @@
                         <strong>注意事項：</strong>
                       </td>
                       <td class="border px-4 py-4">
-                        是次分享將以普通話和英語進行
+                        黃懿萱將以普通話和英語進行分享，另有主持以廣東話從旁輔助
                       </td>
                     </tr>
                     <!--
@@ -271,11 +269,6 @@
                     登記是次活動即代表我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<a class="underline" href="https://www.greenpeace.org/hongkong/policies/privacy-and-cookies/" target="_blank">個人資料政策</a>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span>
                 </div>
               </div>
-              <div class="my-8">
-                <span class="text-sm">*
-                  煮食教室將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取
-                  Zoom 鏈結。</span>
-              </div>
             </div>
           </div>
         </div>
@@ -309,7 +302,7 @@
     </footer>
     <!-- end of footer -->
     <!-- scripts -->
-    <script src="main.a7d17269.js"></script>
+    <script src="main.b97defea.js"></script>
     <!-- end of scripts -->
   </body>
 </html>
