--- a/cooking.html
+++ b/cooking.html
@@ -52,7 +52,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="stylesheet" href="styles.70d19a1c.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  <link rel="stylesheet" href="main.1d601d0a.css"></head>
+  </head>
 
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!-- Google Tag Manager (noscript) -->
@@ -280,7 +280,7 @@ grid-auto-flow: column;
     </footer>
     <!-- end of footer -->
     <!-- scripts -->
-    <script src="main.a7d17269.js"></script>
+    <script src="main.b97defea.js"></script>
     <!-- end of scripts -->
   </body>
 </html>
