--- a/webinar.html
+++ b/webinar.html
@@ -44,13 +44,13 @@
       香港">
     <meta property="og:site_name" content="Greenpeace 綠色和平">
     <meta property="og:description" content="綠色和平將舉辦「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會，邀請到現正在船艦「極地曙光號」工作的水手黃懿萱（又名小豚），於船上直播，帶您參觀船上設備、船員日常生活；並與您即時對話，分享多年隨船協助研究和行動的經歷、在海上工作的趣事、為何如此熱衷守護海洋等等。">
-    <meta property="og:image" content="https://storage.googleapis.com/planet4-taiwan-stateless/2020/05/40a91539-ats_greenpeace_legc_298-%C2%A9-abbie-trayler-smith_greenpeace-2048x1366.jpg">
+    <meta property="og:image" content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/455515ec-banner04_16x9©-ryu-han-bum_greenpeace-2.jpg">
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="192994240714848">
     <!-- meta tag-->
     <link rel="shortcut icon" type="image/png" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
-    <link rel="stylesheet" href="styles.70d19a1c.css">
+    <link rel="stylesheet" href="styles.342cade8.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
 
@@ -84,7 +84,7 @@
         <div class="flex flex-wrap">
           <div class="w-full md:w-1/2 lg:w-2/3">
             <div class="cover-image relative">
-              <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/2c64b8f6-screen-shot-2020-05-26-at-18.06.07.png" alt="立即報名：「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會">
+              <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/455515ec-banner04_16x9©-ryu-han-bum_greenpeace-2.jpg" alt="立即報名：「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會">
             </div>
             <div class="px-4 py-4 mb-8">
               <div class="flex flex-wrap justify-between">
@@ -111,8 +111,8 @@
                 <table class="bg-white rounded border table-fixed w-full">
                   <thead>
                     <tr>
-                      <th class="w-1/4"></th>
-                      <th class="w-3/4"></th>
+                      <th class="w-1/3 md:w-1/4"></th>
+                      <th class="w-2/3 md:w-3/4"></th>
                     </tr>
                   </thead>
                   <tbody>
