before webinar launch check

--- a/src/webinar.html
+++ b/src/webinar.html
@@ -61,7 +61,7 @@
     />
     <meta
       property="og:image"
-      content="https://storage.googleapis.com/planet4-taiwan-stateless/2020/05/40a91539-ats_greenpeace_legc_298-%C2%A9-abbie-trayler-smith_greenpeace-2048x1366.jpg"
+      content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/455515ec-banner04_16x9©-ryu-han-bum_greenpeace-2.jpg"
     />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="192994240714848" />
@@ -133,7 +133,7 @@
             <div class="cover-image relative">
               <img
                 class="w-full"
-                src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/2c64b8f6-screen-shot-2020-05-26-at-18.06.07.png"
+                src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/455515ec-banner04_16x9©-ryu-han-bum_greenpeace-2.jpg"
                 alt="立即報名：「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會"
               />
             </div>
@@ -148,7 +148,7 @@
                   </h1>
                 </div>
               </div>
-              <div class="line"></div>
+              <div class="line my-8"></div>
               <p class="text">
                 綠色和平將舉辦「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會，邀請到現正在船艦「極地曙光號」工作的水手黃懿萱（又名小豚），於船上直播，帶您參觀船上設備、船員日常生活；並與您即時對話，分享多年隨船協助研究和行動的經歷、在海上工作的趣事、為何如此熱衷守護海洋等等。
               </p>
@@ -164,8 +164,8 @@
                 <table class="bg-white rounded border table-fixed w-full">
                   <thead>
                     <tr>
-                      <th class="w-1/4"></th>
-                      <th class="w-3/4"></th>
+                      <th class="w-1/3 md:w-1/4"></th>
+                      <th class="w-2/3 md:w-3/4"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -174,17 +174,14 @@
                         <strong>日期：</strong>
                       </td>
                       <td class="border px-4 py-4">
-                        2020年6月8日（星期日）
+                        2020年6月7日
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
                         <strong>時間：</strong>
                       </td>
-                      <td class="border px-4 py-4">
-                        線上參觀船艦「極地曙光號」 - 下午時至時<br />
-                        與XXX即席交流 - 下午時至時半
-                      </td>
+                      <td class="border px-4 py-4">下午9時至10時</td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
@@ -200,7 +197,8 @@
                       </td>
                       <td class="border px-4 py-4">
                         <p class="text">
-                          2011年首次在彩虹勇士號擔任廚師助理，雖名為水手，實際是翻譯、裁縫、工匠、行動者一手包辦，更擅長操作精密科學儀器！
+                          2011
+                          年首次在彩虹勇士號擔任廚師助理，雖名為水手，實際是翻譯、裁縫、工匠、行動者一手包辦，更擅長操作精密科學儀器！
                         </p>
                         <p class="text">
                           曾參與追查非法漁船、攀登鑽油台行動、親身拯救日本儒艮及台灣瓶鼻海豚，最近完成南極研究航程。
@@ -212,7 +210,7 @@
                         <strong>注意事項：</strong>
                       </td>
                       <td class="border px-4 py-4">
-                        是次分享將以普通話和英語進行
+                        黃懿萱將以普通話和英語進行分享，另有主持以廣東話從旁輔助
                       </td>
                     </tr>
                     <!--
@@ -446,13 +444,6 @@
                     >與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
                   >
                 </div>
-              </div>
-              <div class="my-8">
-                <span class="text-sm"
-                  >*
-                  煮食教室將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取
-                  Zoom 鏈結。</span
-                >
               </div>
             </div>
           </div>
