--- a/webinar.html
+++ b/webinar.html
@@ -44,7 +44,7 @@
       香港">
     <meta property="og:site_name" content="Greenpeace 綠色和平">
     <meta property="og:description" content="綠色和平將舉辦「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會，邀請到現正在船艦「極地曙光號」工作的水手黃懿萱（又名小豚），於船上直播，帶您參觀船上設備、船員日常生活；並與您即時對話，分享多年隨船協助研究和行動的經歷、在海上工作的趣事、為何如此熱衷守護海洋等等。">
-    <meta property="og:image" content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/455515ec-banner04_16x9©-ryu-han-bum_greenpeace-2.jpg">
+    <meta property="og:image" content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/ffa9a04c-banner04_16x9_preview.jpg">
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="192994240714848">
     <!-- meta tag-->
@@ -121,14 +121,14 @@
                         <strong>日期：</strong>
                       </td>
                       <td class="border px-4 py-4">
-                        2020年6月7日
+                        2020年6月7日（星期日）
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
                         <strong>時間：</strong>
                       </td>
-                      <td class="border px-4 py-4">下午9時至10時</td>
+                      <td class="border px-4 py-4">晚上下午9時至10時</td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
@@ -157,31 +157,10 @@
                         <strong>注意事項：</strong>
                       </td>
                       <td class="border px-4 py-4">
-                        黃懿萱將以普通話和英語進行分享，另有主持以廣東話從旁輔助
+                        黃懿萱將以<u>普通話和英語</u>進行分享，另有主持以廣東話從旁輔助
                       </td>
                     </tr>
-                    <!--
-                    <tr class="">
-                      <td class="border px-4 py-4">
-                        <strong>星級大廚：</strong>
-                      </td>
-                      <td class="border px-4 py-4">
-                        <div class="speaker mt-4">
-                          <img
-                            class="speaker__avatar h-40 w-40"
-                            src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/fc867f91-cooking_leung_square.jpg"
-                            alt="梁祖堯"
-                          />
-                          <div class="px-4 py-4">
-                            <h3>黃懿萱背景：</h3>
-                            <span class="text-sm text-gray-700"
-                              >煮食兼綠色生活達人</span
-                            >
-                          </div>
-                        </div>
-                      </td>
-                    </tr>
-                  --></tbody>
+                  </tbody>
                 </table>
               </div>
               <div class="line"></div>
