--- a/src/meatfree.html
+++ b/src/meatfree.html
@@ -143,13 +143,13 @@
                 <div class="mt-8">
                   <h1 class="text-4xl font-bold">
                     立即報名：「素媽媽Christine同你煮：父親節健康素食大餐」線上烹飪班
-                    <p class="text-2xl mt-2 text-gray-500">
+                    <p class="text-2xl mt-2 text-gray-600">
                       Christine將教您烹調父親節健康素食大餐，包括牛肝菌豆腐釀山根球及麻辣冬瓜封。
                     </p>
                   </h1>
                 </div>
               </div>
-              <div class="line my-8"></div>
+              <div class="border-t my-8"></div>
               <p class="text">
                 綠色和平將舉辦「邀請到茹素超過二十年，鑽研多國素菜食譜的「Wan
                 Veggie Mom 素韻私房菜」主理人<strong
@@ -205,7 +205,7 @@
                         <div class="speaker mt-4 mb-4">
                           <p class="text text-center">
                             <img
-                              class="speaker__avatar rounded-full h-48 w-48"
+                              class="speaker__avatar rounded-full overflow-hidden shadow h-56 w-56"
                               src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/06/c4ab3272-eventpage_pics-03.png"
                               alt="素媽媽 Christine"
                             />
@@ -229,8 +229,10 @@
                     src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/06/b7a97dcd-eventpage_pics-02.jpg"
                     alt="父親節健康素食大餐 - 牛肝菌豆腐釀山根球"
                   />
-                  <span class="credit-line"
-                    >父親節健康素食大餐 - 牛肝菌豆腐釀山根球</span
+                  <span class="mt-4 credit-line tracking-wide"
+                    ><strong
+                      >父親節健康素食大餐 - 牛肝菌豆腐釀山根球</strong
+                    ></span
                   >
                 </div>
                 <div class="col-xs-12 col-md-8 col-md-offset-4 mb-8">
@@ -238,8 +240,8 @@
                     src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/06/aa5ba6fe-eventpage_pics-01.jpg"
                     alt="父親節健康素食大餐 - 麻辣冬瓜封"
                   />
-                  <span class="credit-line"
-                    >父親節健康素食大餐 - 麻辣冬瓜封</span
+                  <span class="mt-4 credit-line tracking-wide"
+                    ><strong>父親節健康素食大餐 - 麻辣冬瓜封</strong></span
                   >
                 </div>
               </div>
