--- a/src/meatfree.html
+++ b/src/meatfree.html
@@ -48,7 +48,7 @@
     <meta name="author" content="Greenpeace 綠色和平" />
     <meta
       name="description"
-      content="綠色和平將舉辦「邀請到茹素超過二十年，鑽研多國素菜食譜的「Wan Veggie Mom 素韻私房菜」主理人Christine 擔任大廚，直播親授獨家食譜——「父親節健康素食2道菜套餐」；並與您即時對話，暢談各地健康素食及低碳生活心得。"
+      content="綠色和平將舉辦「素媽媽Christine同你煮：父親節健康純素」線上教室，邀請到茹素超過二十年，鑽研多國素菜食譜的「Wan Veggie Mom 素韻私房菜」主理人Christine 擔任大廚，直播親授獨家食譜——「父親節健康素食2道菜套餐」；並與您即時對話，暢談各地健康素食及低碳生活心得。"
     />
     <meta
       property="og:title"
@@ -58,7 +58,7 @@
     <meta property="og:site_name" content="Greenpeace 綠色和平" />
     <meta
       property="og:description"
-      content="綠色和平將舉辦「邀請到茹素超過二十年，鑽研多國素菜食譜的「Wan Veggie Mom 素韻私房菜」主理人Christine 擔任大廚，直播親授獨家食譜——「父親節健康素食2道菜套餐」；並與您即時對話，暢談各地健康素食及低碳生活心得。"
+      content="綠色和平將舉辦「素媽媽Christine同你煮：父親節健康純素」線上教室，邀請到茹素超過二十年，鑽研多國素菜食譜的「Wan Veggie Mom 素韻私房菜」主理人Christine 擔任大廚，直播親授獨家食譜——「父親節健康素食2道菜套餐」；並與您即時對話，暢談各地健康素食及低碳生活心得。"
     />
     <meta
       property="og:image"
@@ -151,11 +151,9 @@
               </div>
               <div class="border-t my-8"></div>
               <p class="text">
-                綠色和平將舉辦「邀請到茹素超過二十年，鑽研多國素菜食譜的「Wan
-                Veggie Mom 素韻私房菜」主理人<strong
-                  >Christine
-                  擔任大廚，直播親授獨家食譜——「父親節健康素食2道菜套餐」；並與您即時對話</strong
-                >，暢談各地健康素食及低碳生活心得。
+                綠色和平將舉辦「素媽媽Christine同你煮：父親節健康純素」線上教室，邀請到茹素超過二十年，鑽研多國素菜食譜的「Wan
+                Veggie Mom 素韻私房菜」主理人Christine
+                擔任大廚，直播親授獨家食譜——「父親節健康素食2道菜套餐」；並與您即時對話，暢談各地健康素食及低碳生活心得。
               </p>
               <p class="text">
                 不妨趁父親節前，學習烹調兩道健康又滋味的家常素菜之餘，擴大多菜少肉救環境的力量，為環境出一分力。
@@ -215,7 +213,7 @@
                           鑽研多國素菜食譜的<strong
                             >「Wan Veggie Mom
                             素韻私房菜」主理人Christine</strong
-                          >將教您烹調<u>父親節健康素食大餐</u>，包括包括牛肝菌豆腐釀山根球及麻辣冬瓜封。
+                          >將教您烹調<u>父親節健康素食大餐</u>，包括牛肝菌豆腐釀山根球及麻辣冬瓜封。
                         </p>
                       </td>
                     </tr>
